Fix overflow code padding

--- a/_extensions/learnr-academy/lesson/lesson.scss
+++ b/_extensions/learnr-academy/lesson/lesson.scss
@@ -6,7 +6,7 @@
   color: $brand-black;
 }
 
-.cell-output-stdout {
+.cell-output-stdout code {
   max-height: 400px;
   overflow-y: auto;
 }
